bug resolve 427 and DbConnection  added

--- a/AddTimeStampConsole/appsettings.json
+++ b/AddTimeStampConsole/appsettings.json
@@ -2,5 +2,9 @@
   "VideoPaths": {
     "InputVideoPath": "C:\\addtimevideo\\temp_input",
     "OutputVideoPath": "C:\\addtimevideo\\addTimeStamp"
+  },
+  "DatabaseConfig": {
+    "ConnectionString": "Data Source=deltasql2019-prod.cs0ijo7jorwh.us-east-1.rds.amazonaws.com;Initial Catalog=Delta_Test;Persist Security Info=True;User ID=imamS;Password=BLueTr33sTrucK3R2024!;TrustServerCertificate=True;"
+    
   }
 }
